--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">MATH BOMB</h1>
 <main>
     <div id="menu">
-        <p>Você tem <span id="destaque">1 minuto</span> para conseguir desarmar a bomba, mas para isso você precisa responder <span id="destaque">10 contas matematicas</span>, sera que você é capaz?</p>
+        <p class="justify">Você tem <span id="destaque">1 minuto</span> para conseguir desarmar a bomba, mas para isso você precisa responder <span id="destaque">10 contas matematicas</span>, sera que você é capaz?</p>
         <br>
         <p class="center"><button id="start">Começar</button></p>
     </div>
