mais algumas alterações no teclado

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!--CASO A TELA FOR PEQUENA -CEL- -->
         <div id="keyboard">
-            <p id="visor"></p>
+            <p id="visor">120</p>
             <button class="btnNum" onclick="btnClick(9)">9</button><button class="btnNum" onclick="btnClick(8)">8</button><button class="btnNum" onclick="btnClick(7)">7</button>
             <br>
             <button class="btnNum" onclick="btnClick(6)">6</button><button class="btnNum" onclick="btnClick(5)">5</button><button class="btnNum" onclick="btnClick(4)">4</button>
